{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 145,
  "lineage": "03bda666-b246-b411-9978-5fbfedbbf884",
  "resources": [
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_instance",
      "name": "cluster_mgr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ef9e689241f0bb6e",
            "arn": "arn:aws:ec2:eu-west-1:013948180024:instance/i-0f639a3a3902390b1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f639a3a3902390b1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "node_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-075a2e2659a83f510",
            "private_dns": "ip-10-101-7-4.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.101.7.4",
            "public_ip": "34.241.227.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05280cf1b866fb49a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0de5b7ebbf2747e01"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04ab43ef574293f04",
            "tags": {
              "Name": "Cluster Manager"
            },
            "tags_all": {
              "Name": "Cluster Manager"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0de5b7ebbf2747e01"
            ]
          },
          "dependencies": [
            "module.cluster.aws_key_pair.node_key",
            "module.cluster.aws_security_group.node",
            "module.cluster.data.aws_ami.aws_linux",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_instance",
      "name": "cluster_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ef9e689241f0bb6e",
            "arn": "arn:aws:ec2:eu-west-1:013948180024:instance/i-0c3762bc5472a7e38",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c3762bc5472a7e38",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "node_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ec497ef266ebe7cd",
            "private_dns": "ip-10-101-7-165.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.101.7.165",
            "public_ip": "34.254.194.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-092d94f7d89fb716d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0de5b7ebbf2747e01"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04ab43ef574293f04",
            "tags": {
              "Name": "Cluster Manager"
            },
            "tags_all": {
              "Name": "Cluster Manager"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0de5b7ebbf2747e01"
            ]
          },
          "dependencies": [
            "module.cluster.aws_instance.cluster_mgr",
            "module.cluster.aws_key_pair.node_key",
            "module.cluster.aws_security_group.node",
            "module.cluster.data.aws_ami.aws_linux",
            "module.cluster.data.external.swarm_join_token",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ef9e689241f0bb6e",
            "arn": "arn:aws:ec2:eu-west-1:013948180024:instance/i-02050c32dc9240df0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02050c32dc9240df0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "node_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0559095850c857ea7",
            "private_dns": "ip-10-101-15-182.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.101.15.182",
            "public_ip": "3.249.104.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b65a411f77d59426",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0de5b7ebbf2747e01"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04ab43ef574293f04",
            "tags": {
              "Name": "Cluster Manager"
            },
            "tags_all": {
              "Name": "Cluster Manager"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0de5b7ebbf2747e01"
            ]
          },
          "dependencies": [
            "module.cluster.aws_instance.cluster_mgr",
            "module.cluster.aws_key_pair.node_key",
            "module.cluster.aws_security_group.node",
            "module.cluster.data.aws_ami.aws_linux",
            "module.cluster.data.external.swarm_join_token",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:013948180024:security-group/sg-0de5b7ebbf2747e01",
            "description": "security group for lambda efs put function",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de5b7ebbf2747e01",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "cluster-node-security-group",
            "name_prefix": "",
            "owner_id": "013948180024",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "forum-dev-node-grp"
            },
            "tags_all": {
              "Name": "forum-dev-node-grp"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fa62abfcfa94c9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0648da86bd95c6545",
            "association_id": "eipassoc-060d5c82916eb5719",
            "domain": "vpc",
            "id": "eipalloc-0648da86bd95c6545",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-04de079c17f3da195",
            "private_dns": "ip-10-101-10-22.eu-west-1.compute.internal",
            "private_ip": "10.101.10.22",
            "public_dns": "ec2-34-247-116-120.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.247.116.120",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "forum-dev-eip"
            },
            "tags_all": {
              "Name": "forum-dev-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:013948180024:internet-gateway/igw-088a3313b69f67ae8",
            "id": "igw-088a3313b69f67ae8",
            "owner_id": "013948180024",
            "tags": {
              "Name": "forum-dev-igw"
            },
            "tags_all": {
              "Name": "forum-dev-igw"
            },
            "vpc_id": "vpc-08fa62abfcfa94c9f"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0648da86bd95c6545",
            "association_id": "eipassoc-060d5c82916eb5719",
            "connectivity_type": "public",
            "id": "nat-0cf26a05df6cc8386",
            "network_interface_id": "eni-04de079c17f3da195",
            "private_ip": "10.101.10.22",
            "public_ip": "34.247.116.120",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04ab43ef574293f04"
          },
          "dependencies": [
            "module.network.aws_eip.nat_gw_eip",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:013948180024:network-acl/acl-0392f5f7a15bf4301",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 150,
                "to_port": 65535
              }
            ],
            "id": "acl-0392f5f7a15bf4301",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.101.0.0/16",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 150,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.101.0.0/16",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 101,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "10.101.0.0/16",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "013948180024",
            "subnet_ids": [
              "subnet-0d28dc54a10ce8c8e"
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-08fa62abfcfa94c9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:013948180024:network-acl/acl-06aac5a89aac2607f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 150,
                "to_port": 65535
              }
            ],
            "id": "acl-06aac5a89aac2607f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 1023
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 101,
                "to_port": 1023
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 150,
                "to_port": 65535
              }
            ],
            "owner_id": "013948180024",
            "subnet_ids": [
              "subnet-04ab43ef574293f04"
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-08fa62abfcfa94c9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:013948180024:route-table/rtb-0cec313c174ece6ba",
            "id": "rtb-0cec313c174ece6ba",
            "owner_id": "013948180024",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cf26a05df6cc8386",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "forum-dev-priv-rt"
            },
            "tags_all": {
              "Name": "forum-dev-priv-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fa62abfcfa94c9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_gw_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:013948180024:route-table/rtb-04a95109568e070b3",
            "id": "rtb-04a95109568e070b3",
            "owner_id": "013948180024",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-088a3313b69f67ae8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "forum-dev-pub-rt"
            },
            "tags_all": {
              "Name": "forum-dev-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fa62abfcfa94c9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_link",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05533f8646548cc4e",
            "route_table_id": "rtb-0cec313c174ece6ba",
            "subnet_id": "subnet-0d28dc54a10ce8c8e"
          },
          "dependencies": [
            "module.network.aws_eip.nat_gw_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_link",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ac0cdfb0a15cf48",
            "route_table_id": "rtb-04a95109568e070b3",
            "subnet_id": "subnet-04ab43ef574293f04"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:013948180024:subnet/subnet-0d28dc54a10ce8c8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.101.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d28dc54a10ce8c8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "013948180024",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "forum-dev-priv-sn-0"
            },
            "tags_all": {
              "Name": "forum-dev-priv-sn-0"
            },
            "vpc_id": "vpc-08fa62abfcfa94c9f"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:013948180024:subnet/subnet-04ab43ef574293f04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.101.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ab43ef574293f04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "013948180024",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "forum-dev-pub-sn-0"
            },
            "tags_all": {
              "Name": "forum-dev-pub-sn-0"
            },
            "vpc_id": "vpc-08fa62abfcfa94c9f"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:013948180024:vpc/vpc-08fa62abfcfa94c9f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.101.0.0/16",
            "default_network_acl_id": "acl-07449deebadac0b20",
            "default_route_table_id": "rtb-07d3d759c9451da61",
            "default_security_group_id": "sg-0b717729859515b01",
            "dhcp_options_id": "dopt-0d1fb529c92f4b8ca",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08fa62abfcfa94c9f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07d3d759c9451da61",
            "owner_id": "013948180024",
            "tags": {
              "Name": "forum-dev-vpc"
            },
            "tags_all": {
              "Name": "forum-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}